# python3-netatmo

./: .gitignore  .travis.yml  Makefile  README.md  README.rst  requirements.txt  setup.cfg  setup.py
docs/: Makefile
docs/source/: conf.py  examples.rst  howto.rst  index.rst  install.rst  whatsthis.rst
docs/source/api/: modules.rst  netatmo.api.rst  netatmo.rst
netatmo/: __init__.py
netatmo/api/: authentication.py  client.py  responsetypes.py
tests/: USER_DATA.json.example  __init__.py  authentication.py  client.py  test_data.py  test_flow.py  utils.py
