[metadata]
name = netatmo
version = 0.1.0
description = access to netatmo api
long_description = file: README.md
keywords = netatmo, api
license = GPLv3
author = Yann Büchau
author_email = yann.buechau@web.de
url = https://github.com/nobodyinperson/python3-netatmo
classifiers = 
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Programming Language :: Python :: 3.5
	Operating System :: OS Independent
	Topic :: Home Automation
	Topic :: Internet
	Topic :: Scientific / Engineering
	Topic :: Scientific/Engineering :: Atmospheric Science
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: Utilities

[options]
packages = find:
test_suite = tests
tests_require = 
	pandas
install_requires = 
	pandas
	numpy

[options.packages.find]
exclude = 
	tests

[easy_install]
